test/opa/gatekeeper-fixtures/resources/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    team-name: opa-test
  annotations:
    ingress-whitelist: "*.acmecorp.com"
    registry-whitelist: "nginx,grafana,prom,k8s.gcr.io"
  name: opa-test-production
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    team-name: opa-test
  annotations:
    ingress-whitelist: "*.qa.acmecorp.com,*.internal.acmecorp.com"
    registry-whitelist: "nginx,grafana,prom,k8s.gcr.io"
  name: opa-test-qa
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    team-name: opa-test
  annotations:
    ingress-whitelist: "*.acmecorp.com"
    registry-whitelist: "nginx,grafana,prom,k8s.gcr.io"
  name: opa-test-staging
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  namespace: opa-test-production
spec:
  rules:
    - host: signin.acmecorp.com
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 80
            pathType: ImplementationSpecific
